--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
 repos:
+
+  - repo: https://github.com/citation-file-format/cffconvert
+    rev: 054bda51dbe278b3e86f27c890e3f3ac877d616c
+    hooks:
+      - id: validate-cff
+      
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0  # the release, git tag, or commit you want to use
     hooks:
